# doctor

./: .gitignore  CMakeLists.txt  DEV.md  README.md  README.profile  builtin.c  builtin.h  post-init.sql
app/: .gitignore  .pylintrc  1profile_main.lua  README.md  TECH.md  afilter.lua  app.lua  avro2meta.lua  avro_wrapper.lua  dbutils.lua  dump_profile_from_sqlite  filter_slow.lua  hdfs_io.lua  hdfsutils.lua  helper.lua  is_slow_query.lua  iterators.lua  list_op_counters.lua  listhdfscounters.lua  logging.lua  logutils.lua  memline.lua  mergedb.py  optlib.lua  optlib_test.lua  parallel.py  pathlib.lua  plot.template  profileutils.lua  slowquery.lua  sqlutils.lua  strategies.lua  strutils.lua  test.lua  view.lua  viewnodes.py  viewprofile
app/tools/: afilter.lua  format_hdfs_throughput.py  listnodes.lua  viewnodes.py  viewprofile
src/: linit.c  lua.c
tools/: lua2c.lua
